Fix template id vs instance id in test case